--- a/my-app/src/assets/scss/App.module.scss
+++ b/my-app/src/assets/scss/App.module.scss
@@ -1,1 +1,18 @@
 @charset "UTF-8";
+@import "base/_reset";
+@import "base/_variables";
+
+body {
+    color:$white;
+    background:$pointColor;
+    font-family:$fontFamily;
+    font-size:18px;
+    font-weight:400;
+    line-height:1.5;
+}
+.wrap {
+    word-break: keep-all;
+}
+.content {
+    padding:0 16px;
+}
