--- a/my-app/src/assets/scss/base/_reset.scss
+++ b/my-app/src/assets/scss/base/_reset.scss
@@ -7,13 +7,18 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	box-sizing:border-box;
 }
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
     display: block;
 }
 body {
 	line-height: 1;
+}
+img {
+	max-width:100%;
+	vertical-align:top;
+	border:0 none;
 }
 ol, ul {
 	list-style: none;
