--- a/my-app/src/assets/scss/base/_variables.scss
+++ b/my-app/src/assets/scss/base/_variables.scss
@@ -1,8 +1,11 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&family=Raleway:wght@300;400;500;600;700&display=swap');
 
+// Color
 $defaultColor:#001;
 $pointColor:#00599D;
 $pointColor2:#FFCB05;
 $white:#fff;
+
+// Font Family
 $fontFamily:'Raleway', 'Noto Sans KR', sans-serif;
