--- a/react-movie/src/scss/index.scss
+++ b/react-movie/src/scss/index.scss
@@ -12,6 +12,11 @@ code {
     monospace;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 [class]:where(ul, ol) {
   list-style: none;
 }
