--- a/react-movie/src/scss/MovieHome.module.scss
+++ b/react-movie/src/scss/MovieHome.module.scss
@@ -8,6 +8,20 @@
   font-size: calc(10px + 2vmin);
   color: white;
   text-align: center;
+
+  &__header {
+    position: sticky;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    width: 100%;
+    padding-inline: 1rem;
+    padding-bottom: 1rem;
+    background-color: #282c34;
+    box-sizing: border-box;
+    box-shadow: 0px 0px 7px inset rgba(255, 255, 255, 0.25);
+  }
 }
 
 .link {
